fixed main__section alignment issue

--- a/src/components/PageUI/PageUI.css
+++ b/src/components/PageUI/PageUI.css
@@ -45,7 +45,6 @@
 
 .main__section {
   color: white;
-  width: 100%;
   margin-bottom: 5rem;
   margin-left: .25rem;
   display: flex;
